Add to custom dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,13 @@
 {
   "cSpell.words": [
     "appsettings",
+    "appsvc",
     "azurefd",
     "connectionstrings",
     "MULTISITE",
     "PHPMYADMIN",
     "serverfarm",
-    "vnetrg"
+    "vnetrg",
+    "wpadmin"
   ]
 }
