Add Azure Communication Services with Azure Managed Domain Add WordPress site title parameter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,9 @@
     "appsvc",
     "azurefd",
     "connectionstrings",
+    "donotreply",
     "MULTISITE",
+    "Namess",
     "PHPMYADMIN",
     "serverfarm",
     "vnetrg",
