Add Front Door configuration Add parameter for email data location

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,10 +5,12 @@
     "azurefd",
     "connectionstrings",
     "donotreply",
+    "fdid",
     "MULTISITE",
     "Namess",
     "PHPMYADMIN",
     "serverfarm",
+    "unitedstates",
     "vnetrg",
     "wpadmin"
   ]
